--- a/main.html
+++ b/main.html
@@ -1,23 +1,48 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <title>sitezoneama</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>zoneama</title>
+    <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
-    <header>
-        <div class="conteneur-logo">
-            <img id="Logo-zoneama" src="photo/logo.png">
-
+<header>
+    <img src="photo/logo.png" alt="">
+    <h1>Bienvenue</h1>
+    <form action="resultat.html" method="get">
+        <input type="text" name="search" placeholder="Rechercher un produit...">
+        <button type="submit">Rechercher</button>
+    </form>
+</header>
+<main>
+        <h2>Nos Produits</h2>
+        <div class="product-list">
+            <!-- Produit 1 -->
+            <div class="product">
+                <img src="photo/xyz.png" alt="Smartphone XYZ">
+                <h3>Smartphone XYZ</h3>
+                <p>Prix : 599.99 €</p>
+                <a href="details.html" class="button">Voir Détails</a>
+            </div>
+            <!-- Produit 2 -->
+            <div class="product">
+                <img src="photo/casque.jpg" alt="Casque Audio Pro">
+                <h3>Casque Audio Pro</h3>
+                <p>Prix : 199.99 €</p>
+                <a href="details.html" class="button">Voir Détails</a>
+            </div>
+            <!-- Produit 3 -->
+            <div class="product">
+                <img src="photo/montre.jpg" alt="Montre Connectée Série 5">
+                <h3>Montre Connectée Série 5</h3>
+                <p>Prix : 149.99 €</p>
+                <a href="details.html" class="button">Voir Détails</a>
+            </div>
         </div>
-        <div id=interface">
-            <p1>accueil</p1>
-            <p1>fvpin</p1>
-            <p1>veun</p1>
-
-
-        </div>
-    </header>
+</main>
+<footer>
+    <p>&copy; 2024 zoneama</p>
+</footer>
 </body>
 </html>
